kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice
spec:
  selector:
    matchLabels:
      app: microservice
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
      - name: microservice-test
        image: cheetahfox/microservice-project:0.02
        ports:
        - containerPort: 2200
        livenessProbe:
          httpGet:
            path: /healthz
            port: 2200
        readinessProbe:
          httpGet:
            path: /readyz
            port: 2200
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice
  name: microservice
  namespace: default  
spec:
  selector:
    app : microservice
  ports:
  - port: 80
    protocol: TCP
    targetPort: 2200          
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: stock-ms.cheetahfox.com
    http:
      paths:
      - backend:
          service:
            name: microservice  
            port:
              number: 2200
        path: /
        pathType: Prefix
